# hotel-management

./: db.sqlite3  pyproject.toml
accounts/: serializers.py  urls.py  views.py
backend/: settings.py  urls.py
hotel_app/: admin.py  models.py  serializers.py  urls.py  views.py
hotel_app/migrations/: 0001_initial.py
